[package]
authors = ["pencoder"]
description = "Evaluates the submission code for AHC (AtCoder Heuristic Contest)."
edition = "2021"
keywords = ["cli", "competitive"]
license = "MIT"
name = "ahc-evaluation"
readme = "README.md"
repository = "https://github.com/atcoder8/ahc-evaluation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = {version = "4.5.4", features = ["derive"]}
csv = "1.3.0"
indicatif = {version = "0.17.8", features = ["rayon"]}
itertools = "0.12.1"
rayon = "1.10.0"
regex = "1.10.4"
serde = {version = "1.0.197", features = ["derive"]}
toml = "0.8.12"
